2003-02-21  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 03760] Re: README.cygwin
	* doc-jp/README: update

2003-02-19  Fumitoshi UKAI  <ukai@debian.or.jp>

	* 0.4 release candidate 3
	* version.c.in: update

2003-02-19  Atsushi YOKOYAMA <yoko-a@cmh.fuchu.toshiba.co.jp>

	* [w3m-dev 03758] Re: SVR4 signal behavior
	* etc.c (reset_signals): use mySignal()
		(setup_child): ditto
		(myExec): ditto
		(mySignal): added, use sigaction if available
	* fm.h (TRAP_ON): use mySignal
		(TRAP_OFF): ditto
	* istream.c (ISclose): ditto
	* main.c (sig_chld): ditto
		(main): ditto
		(do_dump): ditto
		(resize_hook): ditto
		(resize_handler): ditto
		(srchcore): ditto
		(readsh): ditto
		(SigAlarm): ditto
	* proto.h (mySignal): added
	* terms.c (error_dump): use mySignal()
		(set_int): ditto
		(mouse_init): ditto

2003-02-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03753] Fixed multipart.cgi
	* scripts/multipart/multipart.cgi.in: remove w3m-control
			use input hidden
			add form_encode

2003-02-18  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 03749] README.cygwin
	* doc-jp/README.cygwin: added
	* doc/README: updated

2003-02-17  Fumitoshi UKAI  <ukai@debian.or.jp>

	* 0.4 release candidate 2
	* version.c.in: update

2003-02-13  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03742] Re: Bug##180814: w3m: Missing w3mimgdisplay message at startup
	* image.c (getCharSize): stderr redirect to omit /bin/sh error message

2003-02-13  Fumitoshi UKAI  <ukai@debian.or.jp>

	* XMakefile (install-core): fix for broken non-POSIX /bin/sh

2003-02-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev-en 00868] fix mark_all_pages
	* anchor.c (reAnchorAny): next_line process for MarkAllPages

2003-02-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev-en 00867] fix installation problem
	* XMakefile (install-core): test AUXBIN_TARGETS

2003-02-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* version.c.in: cvs version
