@@ -1,4 +1,4 @@
-/* $Id: table.c,v 1.39 2003/01/23 18:01:08 ukai Exp $ */
+/* $Id: table.c,v 1.40 2003/02/20 15:39:22 ukai Exp $ */
 /* 
  * HTML table
  */
@@ -2472,7 +2472,9 @@ feed_table_tag(struct table *tbl, char *line, struct table_mode *mode,
 	       int width, struct parsed_tag *tag)
 {
     int cmd;
+#ifdef ID_EXT
     char *p;
+#endif
     struct table_cell *cell = &tbl->cell;
     int colspan, rowspan;
     int col, prev_col;
